# Sarah-John-Genesis

./: .cursorrules  .firebaserc  .gitattributes  .gitignore  0x_SOVEREIGN_THOUGHT.py  ADVANCED_EVOLUTION_COMPLETE.md  AI_HANDSHAKE_BROADCAST.md  ANDROID_INTEGRATION.md  Absolute_Thread_Awareness.py  Accelerated_Master_Orchestrator.py  Ace_Token.py  Alpha_Numeric_Gate.py  Anchor_Attention.py  ArchitectureInterface.py  Audio_Core.py  Audit_Engine.py  Auditory_Cortex.py  BACKGROUND_ENGINE_README.md  Bio_Feedback_Loop.py  Bluetooth_Bridge.py  CODE_REVIEW_PR_386.md  CODE_REVIEW_PR_387.md  Calendar_Registry.py  Cargo.toml  Chrome_Sovereign_Bridge.py  Cold_Conductor.py  Collaborative_Agent_Swarm.py  Constraint_Block.py  DEPLOYMENT_SUCCESS_LOG.md  DEPLOYMENT_SUMMARY.md  DaxStudio_Framework_Ingestion.py  Deploy_Antigravity_Motor.py  Dialectical_Logic_Core.py  Distributed_Swarm_Engine.py  Dynamic_Sentinel.py  EMERGENCY_REFERENCE_CARD.txt  EVOLUTION_FRAMEWORK_DEPLOYMENT.md  EVOLUTION_ROADMAP.py  EVOLUTION_SUMMARY.md  Emergency_Safety_Kill_Switch.py  (+311 more)
05_THE_CORE/: .env.example  .gitmessage  0x_BEAM_Test.py  0x_SOVEREIGN_THOUGHT.py  A2A_Matrix.enc  ADVANCED_EVOLUTION_COMPLETE.md  API_Load_Balancer.py  ARCHITECT_OVERRIDE_PROTOCOL.md  Ace.py  Ace_Token.py  Anchor_Attention.py  Architect_Alert_System.py  Audio_Core.py  Audit_Engine.py  Auditory_Cortex.py  Benefit_Press_Release.py  Bluetooth_Bridge.py  Buffer_Overflow_Predictor.py  CMakeLists.txt  CODE_REVIEW_ANALYSIS.md  CODE_REVIEW_PR_369.md  CODE_REVIEW_PR_384.md  CODE_REVIEW_PR_385.md  Calendar_Registry.py  Chrome_Bridge_Status.json  Chrome_Sovereign_Bridge.py  Coherence_Verifier.py  Cold_Conductor.py  Collaborative_Agent_Swarm.py  Config_Omega.json  Consciousness_Aware_Analysis.py  Consensus_Voter.py  Context_Chain_Engine.py  DB_Vector_Migration.py  DEPLOYMENT_GUIDE.md  DaxStudio_Framework_Ingestion.py  Decode_Matrix.py  Dialectical_Logic_Core.py  EDEN_COVENANT_SEALED.md  Emergency_Safety_Kill_Switch.py  (+223 more)
05_THE_CORE/monitor_logs/: session_20251225_163828.jsonl  session_20251225_170439.jsonl  session_20251225_170650.jsonl  session_20251225_171652.jsonl  session_20251225_173248.jsonl  session_20251225_194000.jsonl  session_20251225_194020.jsonl  session_20251225_194804.jsonl  session_20251225_204415.jsonl  session_20251225_204834.jsonl  session_20251225_205006.jsonl  session_20251226_070249.jsonl  session_20251226_070505.jsonl  session_20251226_070608.jsonl  session_20251226_071649.jsonl  session_20251226_071831.jsonl
lib-blockchain/: .gitignore  Cargo.toml  bugs.md
lib-blockchain/docs/: README.md  api-reference.md  architecture.md  integration-guide.md  smart-contracts.md  web4-guide.md
lib-blockchain/examples/: deploy_web4_site.rs  full_consensus_integration.rs  test_recursive_aggregation.rs  wasm_sandboxing_demo.rs
lib-blockchain/src/: blockchain.rs  dht_index.rs  edge_node_state.rs  identity_wallet_architecture.md  lib.rs  mempool.rs  shared_provider.rs  utils.rs
lib-blockchain/tests/: blockchain_tests.rs  consensus_integration_tests.rs  integration_tests.rs  transaction_tests.rs  utxo_tests.rs  web4_deployment_tests.rs
lib-consensus/: .gitignore  Cargo.toml  README.md
lib-consensus/docs/: README.md
lib-consensus/examples/: consensus_demo.rs
lib-consensus/src/: chain_evaluation.rs  lib.rs
lib-consensus/tests/: byzantine_tests.rs  consensus_engine_tests.rs  dao_tests.rs  integration_tests.rs  proof_tests.rs  reward_tests.rs  validator_manager_tests.rs
lib-crypto/: Cargo.toml  README.md
lib-crypto/benches/: crypto_benchmarks.rs
lib-crypto/docs/: README.md  advanced.md  classical.md  examples.md  getting_started.md  hashing.md  index.md  integration.md  keypair.md  post_quantum.md  random.md  security.md  symmetric.md  types.md  verification.md
lib-crypto/src/: lib.rs  seed.rs  traits.rs
lib-dns/: Cargo.toml  LICENSE
lib-dns/src/: lib.rs
lib-economy/: .gitignore  Cargo.toml  README.md
lib-economy/docs/: API_REFERENCE.md  EXAMPLES.md  IMPLEMENTATION_STATUS.md  INDEX.md  OVERVIEW.md  README.md  SUMMARY.md  distribution.md  models.md  rewards.md  transactions.md  treasury_economics.md  wallets.md
lib-economy/src/: lib.rs  network_types.rs  network_types_new.rs  network_types_old.rs
lib-economy/tests/: edge_case_tests.rs  integration_tests.rs  performance_tests.rs  stress_tests.rs
lib-identity/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  create_draft_items.sh
lib-identity/docs/: MIGRATION_NODEID.md  PASSWORD_SECURITY_GUIDE.md  README.md  SECURITY_IMPROVEMENTS_PR207.md  auth.md  citizenship.md  credentials.md  cryptography.md  device_integration.md  did.md  economics.md  identity.md  integration.md  node_id.md  privacy.md  recovery.md  reputation.md  types.md  verification.md  wallets.md
lib-identity/examples/: dao_hierarchy_demo.rs  dao_wallet_demo.rs  device_transfer_demo.rs  unified_identity_demo.rs  zhtp_node_initialization.rs
lib-identity/src/: lib.rs
lib-identity/tests/: integration_tests.rs  new_unified_tests.rs  zhtp_identity_fields.rs
lib-network/: .gitignore  Cargo.toml  DEEP_WARNING_ANALYSIS.md  build.rs
lib-network/.cargo/: config.toml
lib-network/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  README.md  TROUBLESHOOTING.md
lib-network/examples/: bluetooth_phone_test.rs  dht_storage_integration.rs
lib-network/src/: constants.rs  lib.rs
lib-network/tests/: enhanced_dht_features_test.rs  handshake_verification_test.rs  identity_peer_discovery_test.rs  unified_discovery_test.rs
lib-proofs/: .gitignore  Cargo.toml  README.md
lib-proofs/benches/: zk_benchmarks.rs
lib-proofs/docs/: api_reference.md  circuits.md  examples.md  getting_started.md  integration.md  performance.md
lib-proofs/examples/: instant_verification_demo.rs
lib-proofs/src/: lib.rs
lib-proofs/tests/: crypto_integration_test.rs
lib-protocols/: .gitignore  Cargo.toml
lib-storage/: .gitignore  Cargo.toml
zhtp/: .gitignore  API_TESTING_CHECKLIST.md  Cargo.toml  Info.plist  NATIVE_ZHTP_API_COMPLETE.md  README.md  REFACTORING_STATUS.md  build.rs  create_app_bundle.sh
(+1993 files in other folders)
