[workspace]
resolver = "2"

members = [
    "lib-blockchain",
    "lib-consensus",
    "lib-crypto",
    "lib-dht",
    "lib-dns",
    "lib-economy",
    "lib-identity",
    "lib-network",
    "lib-proofs",
    "lib-protocols",
    "lib-storage",
    "zhtp",
    "tests/lib-identity/test-lib-identity-imports",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Network Team"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
