[package]
name = "lib-blockchain"
version = "0.1.0"
edition = "2021"
description = "ZHTP Blockchain Core Implementation"
license = "MIT"

[dependencies]
# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
hex = "0.4"
blake3 = "1.5"
rand = "0.8"

# Additional dependencies for contracts
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.0"

# WASM runtime dependencies (optional)
wasmtime = { version = "37.0.1", optional = true }

# Internal ZHTP dependencies (Foundation Layer Only)
lib-crypto = { path = "../lib-crypto" }
lib-proofs = { path = "../lib-proofs" }
lib-identity = { path = "../lib-identity" }
lib-storage = { path = "../lib-storage" }
lib-consensus = { path = "../lib-consensus" }
lib-economy = { path = "../lib-economy" }

[features]
default = ["contracts", "wasm-runtime"]
testing = []
contracts = []
wasm-runtime = ["wasmtime"]
wasmtime = ["dep:wasmtime"]

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = "0.5"
tracing-subscriber = "0.3"
tempfile = "3.0"
lib-network = { path = "../lib-network" }

[[example]]
name = "full_consensus_integration"
path = "examples/full_consensus_integration.rs"
