[package]
name = "lib-crypto"
version = "0.1.0"
edition = "2021"
description = "ZHTP Post-Quantum Cryptography Foundation Module - CRYSTALS implementations"
license = "MIT"
repository = "https://github.com/SOVEREIGN-NETWORK/ZHTPDEV"

[dependencies]
# Post-quantum cryptography (NIST standardized CRYSTALS)
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.7" 
pqcrypto-traits = "0.3"

# Classical cryptography for compatibility (but identities use pure PQC)
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = "4.0"

# Symmetric cryptography
chacha20poly1305 = "0.10"

# Hashing and key derivation
blake3 = "1.5"
sha3 = "0.10"
hkdf = "0.12"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
hex = "0.4"
zeroize = { version = "1.6", features = ["derive"] }
subtle = "2.5"  # Constant-time cryptographic operations

# NOTE: ZK proof functionality is provided via trait interface
# Implementation is available in lib-proofs package to avoid circular dependencies

# For development/testing
[dev-dependencies]
criterion = "0.5"

[lib]
name = "lib_crypto"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
development = [] # Enable development mode signatures for browser integration

[[bench]]
name = "crypto_benchmarks"
harness = false
