[package]
name = "lib-economy"
version = "0.1.0"
edition = "2021"
description = "ZHTP Economics Engine - Post-scarcity economics, UBI distribution, and ISP replacement incentives"
authors = ["ZHTP Team"]
license = "MIT"
repository = "https://github.com/SOVEREIGN-NETWORK/ZHTPDEV"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tracing = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# ZHTP package dependencies
lib-crypto = { path = "../lib-crypto" }
lib-identity = { path = "../lib-identity" }
lib-proofs = { path = "../lib-proofs" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }

# WebAssembly compatibility
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

[features]
default = ["std"]
std = ["tracing"]
wasm = []

[lib]
name = "lib_economy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
