[package]
name = "lib-identity"
version = "0.1.0"
edition = "2021"
description = "ZHTP Identity Management - Zero-knowledge identity system with quantum-resistant cryptography and complete citizen onboarding"

[lib]
name = "lib_identity"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
hex = "0.4"
blake3 = "1.4"
tracing = "0.1"
bincode = "1.3"
md5 = "0.7"
sha2 = "0.10"
names = { version = "0.14", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
lib-crypto = { path = "../lib-crypto" }
lib-proofs = { path = "../lib-proofs" }
aes-gcm = "0.10"
argon2 = "0.5"
subtle = "2.5"

# CRITICAL FIX C2: Cryptographically secure random number generation
getrandom = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
browser-compat = []
