[package]
name = "lib-network"
version = "0.1.0"
edition = "2021"
authors = ["ZHTP Development Team"]
description = "ZHTP Mesh Protocol - Internet Replacement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SOVEREIGN-NETWORK/ZHTPDEV"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Hex encoding for debugging
hex = "0.4"

# Security: HKDF for proper key derivation
hkdf = "0.12"
sha3 = "0.10"

# Security: Constant-time operations
subtle = "2.5"

# Security: Zeroize sensitive data
zeroize = { version = "1.7", features = ["derive"] }

# Security: Rate limiting for DoS protection
governor = "0.6"

# Security: LRU cache for bounded nonce storage
lru = "0.12"

# Platform directories for secure file locations
dirs = "5.0"

# CRITICAL FIX C3: Faster RwLock for atomic state updates
parking_lot = "0.12"

# CRITICAL FIX C1: BLAKE3 for proof-of-work
blake3 = "1.5"

# CRITICAL FIX C4: Persistent nonce cache with RocksDB
rocksdb = "0.21"

# X25519 for ephemeral key exchange (forward secrecy)
x25519-dalek = "2.0"

# Post-quantum cryptography (Kyber for forward secrecy)
pqc_kyber = "0.7"

# System calls (for Bluetooth Classic on macOS/Linux)
libc = "0.2"

# Cryptographic hashing
sha2 = "0.10"

# Date and time utilities
chrono = "0.4"

# URL encoding/decoding for path normalization security
urlencoding = "2.1"

# Network IP detection
local-ip-address = "0.5"

# Socket options (SO_REUSEADDR for multicast)
socket2 = "0.5"

# Async utilities
futures = "0.3"

# REQUIRED for LoRaWAN hardware communication
serialport = "4.2"           # USB LoRaWAN modules (NEEDED)

# WiFi Direct P2P and service discovery
mdns-sd = "0.16"                                  # mDNS service discovery (Bonjour/Zeroconf) - latest stable version
# WPS functionality will be implemented using standard networking crates

# QUIC protocol (modern transport replacing TCP/UDP split)
# NOTE: QUIC integration ready but commented out until cmake/NASM dependencies resolved
quinn = "0.11"                                    # Production-ready QUIC implementation (used by Google, Cloudflare)
rustls = { version = "0.23", default-features = false, features = ["ring"] } # TLS 1.3 library (used by quinn)
rustls-pemfile = "2.1"                              # PEM file parsing for persistent TLS certificates
rcgen = "0.14.5"                                    # Certificate generation for QUIC
x509-parser = "0.16"                                # X.509 certificate parsing for SPKI extraction
#To enable: Install cmake and NASM, then uncomment above lines

# Enhanced parsing and crypto for production implementations
quick-xml = { version = "0.31", optional = true }  # XML parsing for D-Bus responses
aes = { version = "0.8", optional = true }          # AES encryption for WPA3-SAE
cmac = { version = "0.7", optional = true }         # CMAC for authentication protocols

# ZHTP package dependencies
lib-crypto = { path = "../lib-crypto" }
lib-proofs = { path = "../lib-proofs" }
lib-economy = { path = "../lib-economy" }
lib-protocols = { path = "../lib-protocols" }
lib-identity = { path = "../lib-identity" }
lib-storage = { path = "../lib-storage" }
lib-blockchain = { path = "../lib-blockchain" }
lib-consensus = { path = "../lib-consensus" }
nix = { version = "0.30.1", features = ["socket"] }

# Platform-specific GATT and Bluetooth APIs
[target.'cfg(target_os = "linux")'.dependencies]
regex = "1.0"                                     # For parsing BlueZ responses
dbus = { version = "0.9", optional = true }       # Direct D-Bus communication with BlueZ
dbus-tokio = { version = "0.7", optional = true } # Async D-Bus support

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"                                     # Modern Objective-C runtime for Core Bluetooth FFI
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSData", "NSError"] }
block2 = "0.6"                                    # Block (closure) support for callbacks

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = [        # Windows Runtime APIs (always available on Windows)
    "Win32_Devices_Bluetooth",
    "Win32_Foundation",
    "Foundation",
    "Foundation_Collections",                    # IVectorView and collection interfaces
    "Storage_Streams",                           # IBuffer interface for GATT data
    "Devices_Bluetooth",                         # BluetoothLEDevice
    "Devices_Bluetooth_GenericAttributeProfile", # GATT Client and Server
    "Devices_Bluetooth_Advertisement",           # BLE Advertising
    "Devices_Bluetooth_Rfcomm",                  # RFCOMM (Bluetooth Classic)
    "Devices_Enumeration",                       # Device enumeration for discovery
    "Devices_WiFiDirect",                        # Windows WiFi Direct APIs
    "Networking_Proximity",                      # P2P proximity APIs
    "Networking_Sockets",                        # StreamSocket for RFCOMM
    "Networking",                                # HostName and networking
] }

# Cryptography (from lib-crypto package)
lib-crypto = { path = "../lib-crypto" }

# ZK proofs (from lib-proofs package)
lib-proofs = { path = "../lib-proofs" }

# Economics system integration
lib-economy = { path = "../lib-economy" }

# Protocols and API system integration
lib-protocols = { path = "../lib-protocols" }

# Identity system integration
lib-identity = { path = "../lib-identity" }

# NOTE: lib-storage dependency added for DHT integration
lib-storage = { path = "../lib-storage" }

# Mobile FFI bindings
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"                                      # Java Native Interface for Android
log = "0.4"                                        # Logging for Android logcat

[target.'cfg(target_os = "ios")'.dependencies]
log = "0.4"                                        # Logging for iOS


[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
futures = "0.3"
tempfile = "3.23.0"

[lib]
name = "lib_network"
path = "src/lib.rs"

[features]
default = []                      # All lib-* dependencies are required and enabled by default
windows-gatt = []                 # Windows GATT Server (BLE advertising) - always available on Windows with WinRT
macos-corebluetooth = []          # macOS Core Bluetooth support
linux-dbus = ["dbus", "dbus-tokio"] # Direct D-Bus BlueZ integration
enhanced-bluetooth = ["linux-dbus"] # Enhanced Bluetooth functionality (WinRT always available on Windows)
enhanced-security = ["aes", "cmac"] # Advanced cryptographic protocols
enhanced-parsing = ["quick-xml"] # Enhanced XML parsing
enhanced-wifi-direct = ["aes", "cmac", "quick-xml"] # Complete WiFi Direct enhancements
hardware-scanning = []
identity-debug = []               # Enable detailed identity verification debug logging (production: disabled)
