[package]
name = "lib-protocols"
version = "1.0.0"
edition = "2021"
authors = ["ZHTP Dev Team <dev@zhtp.org>"]
description = "ZHTP Protocol Stack - Web4 Protocol Implementation"
license = "MIT"
repository = "https://github.com/SOVEREIGN-NETWORK/ZHTPDEV"
homepage = "https://zhtp.org"
documentation = "https://docs.zhtp.org"
keywords = ["zhtp", "web4", "blockchain", "zero-knowledge", "protocols"]
categories = ["network-programming", "cryptography", "web-programming"]

[lib]
name = "lib_protocols"
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "sync"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
blake3 = "1.5"
hex = "0.4"
once_cell = "1.19"

# Async and futures
futures = "0.3"
async-trait = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"

# Cryptography
rand = "0.8"
regex = "1.0"
flate2 = "1.0"
sha2 = "0.10"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections and utilities
dashmap = "5.0"
urlencoding = "2.1"

# Wire protocol serialization
ciborium = "0.2"
getrandom = "0.2"

# Internal ZHTP packages
lib-crypto = { path = "../lib-crypto" }
lib-proofs = { path = "../lib-proofs" }
lib-blockchain = { path = "../lib-blockchain" }
lib-identity = { path = "../lib-identity" }
lib-economy = { path = "../lib-economy" }
lib-storage = { path = "../lib-storage" }
lib-consensus = { path = "../lib-consensus" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"

[features]
default = ["full"]
full = ["zhtp", "zdns", "api", "testing"]
zhtp = []
zdns = []
api = []
testing = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
